feat: use cors allowed origins from application properties